Use AIRFLOW_HOME in jupyter notebook

--- a/resources/jupyter_notebooks/Explore_supplementary_CSV_files.ipynb
+++ b/resources/jupyter_notebooks/Explore_supplementary_CSV_files.ipynb
@@ -4,6 +4,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Summary\n",
+    "\n",
+    "1. Generate `CREATE TABLE` statements\n",
+    "1. Check distinct values in all columns"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Initialize"
    ]
   },
@@ -26,8 +36,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "DATA_PATH = os.path.realpath(os.path.join('..', '..', 'etl', 'airflow_home',\n",
-    "                                          'resources', 'data'))\n",
+    "DATA_PATH = os.path.join(os.environ['AIRFLOW_HOME'], 'resources', 'data')\n",
     "\n",
     "\n",
     "def explore_and_create_sql(csv_file: str, data_path=DATA_PATH, **read_csv_args\n",
