Add jupyter notebooks

--- a/resources/jupyter_notebooks/Analysis.ipynb
+++ b/resources/jupyter_notebooks/Analysis.ipynb
@@ -4,6 +4,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Summary\n",
+    "\n",
+    "Example on how to connect to the database and run queries."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Initialize"
    ]
   },
